# rotastellar-agent

./: Cargo.toml  Dockerfile  LICENSE  PROTOCOL.md  README.md
.github/workflows/: ci.yml
constellation/: entrypoint.sh  satellites.json
src/: agent.rs  client.rs  constellation.rs  hazard.rs  lib.rs  ocp.rs  sim_client.rs  simulated.rs  types.rs
